# auth/openapi.yml
@@ -3,7 +3,6 @@ info:
   title: Mainflux authentication service
   description: HTTP API for managing platform API keys.
   version: "1.0.0"
-
 paths:
   /keys:
     post:
@@ -93,7 +92,7 @@ paths:
         be returned as JSON array or JSON tree.
       tags:
         - auth
-      parameters:
+      parameters:    
         - $ref: "#/components/parameters/Authorization"
         - $ref: "#/components/parameters/GroupId"
         - $ref: "#/components/parameters/Level"
@@ -248,18 +247,98 @@ paths:
           $ref: "#/components/responses/GroupCreateRes"
         '400':
           description: Failed due to malformed JSON.
+        '403':
+          description: Missing or invalid access token provided.
         '409':
           description: Failed due to using an existing email address.
         '415':
           description: Missing or invalid content type.
         '500':
           $ref: "#/components/responses/ServiceError"
+  /groups/{groupID}/members:
+    get:
+    description: |
+      Array of ids that are in the group specified with groupID.
+    parameters:
+      - $ref: "#/components/parameters/Authorization"
+      - $ref: "#/components/parameters/GroupID"
+      - $ref: "#/components/parameters/Offset"
+      - $ref: "#/components/parameters/Limit"
+    responses:
+        '200':
+          $ref: "#/components/responses/MembersRes"
+        '403':
+          description: Missing or invalid access token provided.
+        '500':
+          $ref: "#/components/responses/ServiceError"
+    
+  /members/{memberID}/groups:
+    get:
+    description: |
+      Array of groups that are assigned to a member specified with memberID.
+    parameters:
+      - $ref: "#/components/parameters/Authorization"
+      - $ref: "#/components/parameters/MemberID"
+      - $ref: "#/components/parameters/Offset"
+      - $ref: "#/components/parameters/Limit"
+    responses:
+        '200':
+          $ref: "#/components/responses/MembershipPageRes""
+        '403':
+          description: Missing or invalid access token provided.
+        '500':
+          $ref: "#/components/responses/ServiceError"
+
 components:
   securitySchemes:
     Authorization:
       type: http
       scheme: bearer
       bearerFormat: jwt
+    GroupResSchema:
+      type: object
+      properties:
+        id:
+          type: string
+          format: ulid
+          description: Unique group identifier generated by the service.
+        name:
+          type: string
+          description: Free-form group name.
+        parentid:
+          type: string
+          description: Group ID of parent group.
+        ownerid:
+          type: string
+          format: uuid
+          description: UUID of user that created the group.
+        metadata:
+          type: object
+          description: Arbitrary, object-encoded group's data.
+        level:
+          type: integer
+          description: Level in hierarchy, distance from the root group.
+        path:
+          type: string
+          description: Hierarchy path, concatenated ids of group ancestors.
+        children:
+          type: object
+          schema: GroupResSchema
+        createdat:
+          type: date-time
+          description: Datetime of group creation.
+        updatedat:
+          type: date-time
+          description: Datetime of last group updated.
+      required:
+        - id
+        - name
+        - ownerid
+        - description
+        - level
+        - path
+        - createdat
+        - updatedat
   schemas:
     Key:
       type: object
@@ -294,7 +373,62 @@ components:
           example: "2019-11-26 13:31:52"
           description: Time when the Key expires. If this field is missing,
             that means that Key is valid indefinitely.
-
+    GroupReqSchema:
+      type: object
+      properties:
+        name:
+          type: string
+          description: |
+            Free-form group name. Group name is unique on the given hierarchy level.
+        description:
+          type: string
+          description: Group description, free form text. 
+        parentid:
+          type: string
+          format: ulid
+          description: Id of parent group, it must be existing group.
+        metadata:
+          type: object
+          description: Arbitrary, object-encoded thing's data.
+    GroupsPage:
+      type: object
+      properties:
+          groups:
+          type: array
+          minItems: 0
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/GroupResSchema"
+      total:
+        type: integer
+        description: Total number of items.
+      level:
+        type: integer
+        description: Level of hierarchy up to which groups are fetched.
+      required:
+        - groups
+        - total
+        - level
+    MembershipPage:
+      type: object
+      properties:
+          groups:
+          type: array
+          minItems: 0
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/GroupResSchema"
+      offset:
+        type: integer
+        description: Number of items to skip during retrieval.
+      limit:
+        type: integer
+        description: Maximum number of items to return in one page.
+      total:
+        type: integer
+        description: Total number of items.
+      required:
+        - groups
   parameters:
     ApiKeyId:
       name: id
@@ -349,6 +483,9 @@ components:
       description: JSON-formatted document describing group create request.
       required: true
       content:
+        application/json:
+          schema:
+           $ref: "#/components/schemas/GroupReqSchema"
   responses:
     ServiceError:
       description: Unexpected server-side error occurred.
@@ -358,3 +495,33 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Key"
+    GroupCreateRes:
+      description: Group created.
+      headers:
+        Location:
+          content:
+            text/plain:
+              schema:
+                type: string
+                description: Created group's relative URL.
+                example: /groups/{groupId}
+    GroupRes:
+      description: Data retrieved.
+      content:
+        application/json:
+      schema:
+            $ref: "#/components/schemas/GroupResSchema"
+    GroupsPageRes:
+      description: Group data retrieved.
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/GroupsPage"
+    MembershipPageRes:
+      description: Groups data retrieved. Groups assigned to a member.
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/MembershipPage"
+    
+
